--- a/mmbouillon/src/assets/scss/_mmbouillon.scss
+++ b/mmbouillon/src/assets/scss/_mmbouillon.scss
@@ -1,7 +1,5 @@
 @import 'foundation';
-
-$myblue-color: #103868;
-$cardio-color: #FF2727;
+@import 'components/variables';
 
 body {
     background: url('../img/logo_mmb.png') no-repeat;
