--- a/mmbouillon/src/assets/scss/app.scss
+++ b/mmbouillon/src/assets/scss/app.scss
@@ -55,5 +55,6 @@
 @import 'components/news';
 @import 'components/menu';
 @import 'components/personne';
+@import 'components/mail';
 @import 'components/pagination-circular';
 @import 'mmbouillon';
