--- a/mmbouillon/src/assets/scss/components/_menu.scss
+++ b/mmbouillon/src/assets/scss/components/_menu.scss
@@ -1,7 +1,5 @@
 @import 'foundation';
-
-$myblue-color: #103868;
-$cardio-color: #FF2727;
+@import 'components/variables';
 
 .mmbouillon-header {
   width: 100%;
